commit kedua